appId: com.aistudio.ricemart.pkqmsx
---
- launchApp

# Wait for app to finish splash screen loading on slow CI emulator
- extendedWaitUntil:
    visible: "10 digit number"
    timeout: 15000

# Login first
- tapOn: "10 digit number"
- inputText: "6300028491"
- tapOn: "••••••••"
- inputText: "Sai@1234"
- tapOn: "Login"

# Wait for Home Screen
- extendedWaitUntil:
    visible: "G-STORE"
    timeout: 15000

- tapOn: "Gifts"

- extendedWaitUntil:
    visible: "Gift Items"
    timeout: 10000
